welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: not found: value faceMur
while(faceMur)(false){
      ^Program:2: error: Boolean(false) does not take parameters
while(faceMur)(false){
                     ^